# Gemini-eGUI

./: Cargo.toml
gemini-code-assist-adapter/: Cargo.toml
gemini-code-assist-adapter/examples/: code_assist.rs  code_assist_files.rs  get_token.rs
gemini-code-assist-adapter/src/: auth.rs  error.rs  lib.rs  models.rs
src/: chat.rs  chat_completion.rs  file_handler.rs  logger.rs  main.rs  sessions.rs  widgets.rs
